--- a/_includes/latest-news.html
+++ b/_includes/latest-news.html
@@ -2,24 +2,24 @@
 <section id="latest-news" class="latest-news">
 	<div class="content-wrapper">
 		<div class="col-lg-10 col-lg-offset-1">
-			<!-- <h3>{{ site.latestNewsTitle }}</h3> -->
+			<h3>{{ site.latestNewsTitle }}</h3>
 			<article class="row">
         <div class="post col-md-6 col-sm-6 text-left animated hiding" data-animation="fadeInDown" data-delay="500">
-          <h6>{{ site.aboutEvent.title }}</h6>
+          <h6>{{ site.latestNewsLeft.title }}</h6>
           <p class="post-body">
-            {{ site.aboutEvent.content }} 
+            {{ site.latestNewsLeft.content }} 
             <!-- <a href="{{ postUrl }}">continue reading</a> -->
           </p>
         </div>
         <div class="post col-md-6 col-sm-6 text-left animated hiding" data-animation="fadeInDown" data-delay="500">
-          <h6>{{ site.aboutGDG.title }}</h6>
+          <h6>{{ site.latestNewsRight.title }}</h6>
           <p class="post-body">
-            {{ site.aboutGDG.content }} 
+            {{ site.latestNewsRight.content }} 
             <!-- <a href="{{ postUrl }}">continue reading</a> -->
           </p>
           <br>
           <div>
-            {% for social in site.socialLinks %}
+            <!-- {% for social in site.socialLinks %}
             <a href="{% if social.permalink != null %} {{ social.permalink | prepend: site.baseurl }} {% else %} {{ social.link }} {% endif %}"
               target="_blank"
               style="padding-right: 5px">
@@ -27,11 +27,11 @@
                   <use xlink:href="{{ site.baseurl }}/img/sprites/sprites.svg#icon-{{ social.icon }}"></use>
                 </svg>
               </a>
-            {% endfor %}
+            {% endfor %} -->
           </div>
         </div>
 			</article>
 		</div>
 	</div>
 </section>
-<!-- End Latest News Section -->
+<!-- End Latest News Section
