--- a/_includes/media.html
+++ b/_includes/media.html
@@ -3,14 +3,14 @@
   <div class="content-wrapper">
     <h3>{{ site.media.title }}</h3>
     <!-- video -->
-    <div class="row" style="background-color: black">
+    <!-- <div class="row" style="background-color: black">
       <div class="col-lg-8 col-lg-offset-2">
         <div class="theme-video embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="{{ site.media.video }}"></iframe>
         </div>
       </div>
     </div>
-    <br><br>
+    <br><br> -->
     <!-- photos -->
     <div class="row">
       {% for photo in (1..site.media.photos.total) %}
