--- a/_includes/rockstar-speakers.html
+++ b/_includes/rockstar-speakers.html
@@ -6,7 +6,7 @@
 			<h3 id="rockstar-speaker-title">{{ site.rockstarSpeakersTitle }}</h3>
 			<div class="clearfix"></div> 
 			<span class="bordered">
-        {% if site.rockstarSpeakersButtonLink %}
+        <!-- {% if site.rockstarSpeakersButtonLink %}
         <a href="{{ site.rockstarSpeakersButtonLink }}" class="bottom-section-link waves-effect waves-button waves-light" target="_blank">
           {{ site.rockstarSpeakersButtonText }}
         </a>
@@ -14,9 +14,9 @@
         <a href="{{ site.baseurl }}/speakers/" class="bottom-section-link waves-effect waves-button waves-light">
           {{ site.rockstarSpeakersButtonText }}
         </a>
-        {% endif %}
+        {% endif %} -->
 			</span>
 		</div>
 	</div>
 </section>
-<!-- End Rockstar Speakers Section -->
+<!-- End Rockstar Speakers Section
