--- a/_includes/speakers-modals.html
+++ b/_includes/speakers-modals.html
@@ -38,16 +38,16 @@
                                 {% if speaker.ribbon != null %}
                                 <div class="modal-ribbon-wrapper">
                                     {% for ribbon in speaker.ribbon %}
-                                    <a class="modal-ribbon" href="{{ ribbon[" url "] }}" target="_blank">{{ ribbon["title"] }}</a> {% endfor %}
+                                    <a class="modal-ribbon" href="{{ ribbon['url'] }}" target="_blank">{{ ribbon['title'] }}</a> {% endfor %}
                                 </div>
                                 {% endif %}
                                 <p class="about">{{ speaker.bio }}</p>
                                 <ul class="social">
                                     {% for social in speaker.social %}
                                     <li>
-                                        <a href="{{ social[" link "] }}" target="_blank">
-                                            <svg class="icon icon-{{ social[" name "] }}" viewBox="0 0 30 32">
-														<use xlink:href="{{ site.baseurl }}/img/sprites/sprites.svg#icon-{{ social["name"] }}"></use>
+                                        <a href="{{ social['link'] }}" target="_blank">
+                                            <svg class="icon icon-{{ social['name'] }}" viewBox="0 0 30 32">
+														<use xlink:href="{{ site.baseurl }}/img/sprites/sprites.svg#icon-{{ social['name'] }}"></use>
 													</svg>
                                         </a>
                                     </li>
